--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>demo</groupId>
-  <artifactId>triple-nablarch</artifactId>
-  <version>1.0.0</version>
+  <groupId>com.nablarch.example</groupId>
+  <artifactId>nablarch-example-http-messaging</artifactId>
+  <version>5u13</version>
   <packaging>war</packaging>
 
   <properties>
-    <scheme>画面オンライン</scheme>
-
-    <!-- 利用するJavaのバージョン -->
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
 
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <!-- gsp-dba-maven-pluginが使用するデータベース設定 -->
-    <db.adminUser>SAMPLE</db.adminUser>
-    <db.user>NABLARCH_EXAMPLE</db.user>
-
-    <webxml.path>src/main/webapp/WEB-INF/web.xml</webxml.path>
+    <db.adminUser>HTTP_MESSAGING_EXAMPLE</db.adminUser>
+    <db.user>HTTP_MESSAGING_EXAMPLE</db.user>
   </properties>
 
   <profiles>
@@ -51,66 +46,24 @@
   <dependencies>
 
     <dependency>
-      <groupId>com.nablarch.configuration</groupId>
-      <artifactId>nablarch-main-default-configuration</artifactId>
-    </dependency>
-
-    <dependency>
       <groupId>com.nablarch.profile</groupId>
       <artifactId>nablarch-web</artifactId>
     </dependency>
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-fw-web</artifactId>
+      <artifactId>nablarch-fw-messaging-http</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>com.nablarch.configuration</groupId>
+      <artifactId>nablarch-main-default-configuration</artifactId>
+    </dependency>
+
+    <!-- ホットデプロイ用 -->
     <dependency>
       <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-fw-jaxrs</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-fw-web-dbstore</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-common-idgenerator-jdbc</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.nablarch.integration</groupId>
-      <artifactId>nablarch-jersey-adaptor</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-core-jdbc</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.nablarch.integration</groupId>
-      <artifactId>nablarch-jsr310-adaptor</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>com.nablarch.integration</groupId>
-      <artifactId>nablarch-jackson-adaptor</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.ws.rs</groupId>
-      <artifactId>javax.ws.rs-api</artifactId>
-      <version>2.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>javax.servlet-api</artifactId>
-      <version>3.1.0</version>
-      <scope>provided</scope>
+      <artifactId>nablarch-fw-web-hotdeploy</artifactId>
     </dependency>
 
     <dependency>
@@ -127,6 +80,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.196</version>
+    </dependency>
+
+    <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
       <version>5.1.3.Final</version>
@@ -137,21 +96,13 @@
       <artifactId>geronimo-jpa_2.0_spec</artifactId>
     </dependency>
 
+    <!-- テスト用 -->
     <dependency>
-      <groupId>com.h2database</groupId>
-      <artifactId>h2</artifactId>
-      <version>1.4.196</version>
-      <scope>runtime</scope>
+      <groupId>com.nablarch.framework</groupId>
+      <artifactId>nablarch-testing</artifactId>
+      <scope>test</scope>
     </dependency>
 
-    <dependency>
-      <groupId>commons-dbcp</groupId>
-      <artifactId>commons-dbcp</artifactId>
-      <version>1.4</version>
-      <scope>runtime</scope>
-    </dependency>
-
-    <!-- TEST -->
     <dependency>
       <groupId>com.nablarch.configuration</groupId>
       <artifactId>nablarch-testing-default-configuration</artifactId>
@@ -160,47 +111,37 @@
 
     <dependency>
       <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-testing</artifactId>
+      <artifactId>nablarch-fw-messaging-mom</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>org.eclipse.jdt.core.compiler</groupId>
-          <artifactId>ecj</artifactId>
-        </exclusion>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-      </exclusions>
+    </dependency>
+
+    <!-- テスト用のクライアント作成に使用する -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.7.2</version>
     </dependency>
 
     <dependency>
-      <groupId>org.eclipse.jdt.core.compiler</groupId>
-      <artifactId>ecj</artifactId>
-      <version>4.5.1</version>
+      <groupId>javax.ws.rs</groupId>
+      <artifactId>javax.ws.rs-api</artifactId>
+      <version>2.0</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>com.nablarch.framework</groupId>
-      <artifactId>nablarch-fw-messaging-http</artifactId>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-client</artifactId>
+      <version>2.22.2</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-json-jackson</artifactId>
+      <version>2.22.2</version>
       <scope>test</scope>
     </dependency>
-
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-all</artifactId>
-      <version>1.3</version>
-      <scope>test</scope>
-    </dependency>
-
   </dependencies>
 
   <build>
@@ -208,43 +149,47 @@
       <resource>
         <directory>src/main/resources</directory>
       </resource>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.sql</include>
+        </includes>
+      </resource>
     </resources>
+
     <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.6.2</version>
-      </plugin>
       <plugin>
         <groupId>jp.co.tis.gsp</groupId>
         <artifactId>gsp-dba-maven-plugin</artifactId>
         <version>4.3.0</version>
         <configuration>
-          <driver>org.h2.Driver</driver>
-          <url>jdbc:h2:./h2/db/nablarch_example</url>
           <adminUser>${db.adminUser}</adminUser>
           <adminPassword>${db.adminUser}</adminPassword>
           <user>${db.user}</user>
           <password>${db.user}</password>
-          <schema>PUBLIC</schema>
-          <useAccessor>true</useAccessor>
-          <rootPackage>demo</rootPackage>
+          <driver>org.h2.Driver</driver>
+          <url>jdbc:h2:./h2/db/http_messaging_example</url>
+          
+          <dataDirectory>src/test/resources/data</dataDirectory>
+          <erdFile>src/main/resources/entity/data-model.edm</erdFile>
+          
+          <rootPackage>nablarch.example</rootPackage>
           <entityPackageName>entity</entityPackageName>
-          <dataDirectory>src/test/resources/data/h2</dataDirectory>
-          <erdFile>src/main/resources/entity/h2.edm</erdFile>
+          <useAccessor>true</useAccessor>
+          <javaFileDestDir>${project.build.directory}/generated-sources/entity</javaFileDestDir>
+          <schema>PUBLIC</schema>
         </configuration>
         <dependencies>
           <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>1.4.192</version>
-            <scope>runtime</scope>
+            <version>1.4.196</version>
           </dependency>
         </dependencies>
         <executions>
           <execution>
-            <id>default-cli</id>
-            <phase>generate-resources</phase>
+            <id>generate-ddl</id>
+            <phase>generate-sources</phase>
             <goals>
               <goal>generate-ddl</goal>
               <goal>execute-ddl</goal>
@@ -254,7 +199,47 @@
           </execution>
         </executions>
       </plugin>
-      <!-- gsp-dba-maven-pluginで自動生成したソースをビルド時に使用するための設定 -->
+      <plugin>
+        <groupId>net.unit8.waitt</groupId>
+        <artifactId>waitt-maven-plugin</artifactId>
+        <version>1.2.1</version>
+        <configuration>
+          <port>9080</port>
+          <servers>
+            <server>
+              <groupId>net.unit8.waitt.server</groupId>
+              <artifactId>waitt-tomcat8</artifactId>
+              <version>1.2.1</version>
+            </server>
+          </servers>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.2.0</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.20.1</version>
+        <configuration>
+          <!-- MANIFEST.MFでClass-Pathを指定すると、依存jar内で定義されているtaglibのuriを正しく解決してくれない。 -->
+          <useManifestOnlyJar>false</useManifestOnlyJar>
+        </configuration>
+      </plugin>
+      <!-- カバレッジ取得 -->
+      <plugin>
+        <groupId>org.jacoco</groupId>
+        <artifactId>jacoco-maven-plugin</artifactId>
+        <version>0.8.0</version>
+        <configuration>
+          <excludes>
+            <exclude>**/com/nablarch/example/app/entity/*</exclude>
+          </excludes>
+        </configuration>
+      </plugin>
+      <!-- 自動生成されたEntityをビルド対象に組み込む -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>build-helper-maven-plugin</artifactId>
@@ -270,58 +255,6 @@
             </configuration>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-war-plugin</artifactId>
-        <configuration>
-          <webXml>${webxml.path}</webXml>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <configuration>
-          <filesets>
-            <fileset>
-              <directory>work/jsp</directory>
-            </fileset>
-          </filesets>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <configuration>
-          <!-- MANIFEST.MFでClass-Pathを指定すると、依存jar内で定義されているtaglibのuriを正しく解決してくれない。 -->
-          <useManifestOnlyJar>false</useManifestOnlyJar>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>net.unit8.waitt</groupId>
-        <artifactId>waitt-maven-plugin</artifactId>
-        <version>1.2.1</version>
-        <configuration>
-          <servers>
-            <server>
-              <groupId>net.unit8.waitt.server</groupId>
-              <artifactId>waitt-tomcat8</artifactId>
-              <version>1.2.1</version>
-            </server>
-          </servers>
-        </configuration>
-      </plugin>
-      <!-- カバレッジ取得 -->
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.8.0</version>
-        <configuration>
-          <excludes>
-            <exclude>**/com/nablarch/example/app/entity/*</exclude>
-          </excludes>
-        </configuration>
       </plugin>
     </plugins>
     <extensions>
