--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,18 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
+<web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
-         http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
-         version="3.1">
+         xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
   <context-param>
-    <!-- DIコンテナの設定ファイルパス -->
     <param-name>di.config</param-name>
-    <param-value>web-boot.xml</param-value>
+    <param-value>http-messaging-boot.xml</param-value>
   </context-param>
 
   <context-param>
-    <!-- 設定重複時の動作設定 -->
     <param-name>di.duplicate-definition-policy</param-name>
     <param-value>OVERRIDE</param-value>
   </context-param>
@@ -21,75 +17,17 @@
     <listener-class>nablarch.fw.web.servlet.NablarchServletContextListener</listener-class>
   </listener>
 
-  <display-name>Nablarch Example</display-name>
-  <description>
-    Nablarch Example
-  </description>
+  <display-name>Http Messaging Web Services Example</display-name>
+  <description>Http Messaging Web Services Example</description>
 
   <filter>
-    <filter-name>webEntryPoint</filter-name>
+    <filter-name>entryPoint</filter-name>
     <filter-class>nablarch.fw.web.servlet.RepositoryBasedWebFrontController</filter-class>
   </filter>
-  <filter>
-    <filter-name>jaxrsEntryPoint</filter-name>
-    <filter-class>com.nablarch.example.app.web.filter.RestfulWebFrontController</filter-class>
-  </filter>
 
   <filter-mapping>
-    <filter-name>webEntryPoint</filter-name>
-    <url-pattern>/action/*</url-pattern>
-    <url-pattern>/</url-pattern>
-  </filter-mapping>
-  <filter-mapping>
-    <filter-name>jaxrsEntryPoint</filter-name>
-    <url-pattern>/api/*</url-pattern>
+    <filter-name>entryPoint</filter-name>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <jsp-config>
-    <jsp-property-group>
-      <url-pattern>*.jsp</url-pattern>
-      <el-ignored>false</el-ignored>
-      <page-encoding>UTF-8</page-encoding>
-      <scripting-invalid>false</scripting-invalid>
-    </jsp-property-group>
-  </jsp-config>
-
-  <mime-mapping>    
-    <extension>js</extension>
-    <mime-type>application/javascript</mime-type>
-  </mime-mapping>
-
-
-  <session-config>
-    <session-timeout>30</session-timeout>
-    <cookie-config>
-      <http-only>true</http-only>
-      <max-age>-1</max-age>
-    </cookie-config>
-  </session-config>
-
-  <error-page>
-    <error-code>400</error-code>
-    <location>/WEB-INF/view/common/errorPages/userError.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>403</error-code>
-    <location>/WEB-INF/view/common/errorPages/permissionError.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>404</error-code>
-    <location>/WEB-INF/view/common/errorPages/pageNotFoundError.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>413</error-code>
-    <location>/WEB-INF/view/common/errorPages/requestEntityTooLarge.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>500</error-code>
-    <location>/WEB-INF/view/common/errorPages/error.jsp</location>
-  </error-page>
-  <error-page>
-    <error-code>503</error-code>
-    <location>/WEB-INF/view/common/errorPages/serviceUnavailableError.jsp</location>
-  </error-page>
 </web-app>
