--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,7 +27,7 @@
 
   <filter-mapping>
     <filter-name>entryPoint</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/http/*</url-pattern>
   </filter-mapping>
 
 </web-app>
