--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,13 @@
       <artifactId>nablarch-main-default-configuration</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.1.0</version>
+      <scope>provided</scope>
+    </dependency>
+
     <!-- ホットデプロイ用 -->
     <dependency>
       <groupId>com.nablarch.framework</groupId>
