--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -22,7 +22,7 @@
 
   <filter>
     <filter-name>entryPoint</filter-name>
-    <filter-class>nablarch.fw.web.servlet.RepositoryBasedWebFrontController</filter-class>
+    <filter-class>com.nablarch.example.http.filter.HttpWebFrontController</filter-class>
   </filter>
 
   <filter-mapping>
